--- a/Backend/WebShopAppREST/src/main/webapp/WEB-INF/web.xml
+++ b/Backend/WebShopAppREST/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,7 @@
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
   <!-- Obavezan Jersey REST Service servlet -->
+
   <servlet>
 		<servlet-name>Jersey REST Service</servlet-name>
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
@@ -24,4 +25,13 @@
 		<!-- Bazna putanja do REST servisa. Može biti bilo šta (pa i prazan string) -->
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
+
+	<filter>
+        <filter-name>CorsFilter</filter-name>
+        <filter-class>services.CorsFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CorsFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
