--- a/Frontend/front-app/package.json
+++ b/Frontend/front-app/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "js-cookie": "^3.0.5",
+    "ol": "^9.2.4",
+    "ol-geocoder": "^4.3.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
